// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RunsAndArchive renders archive page 1`] = `
<div
  className="page"
>
  <MD2Tabs
    onSwitch={[Function]}
    selectedTab={1}
    tabs={
      Array [
        "",
        "",
      ]
    }
  />
  <EnhancedArchivedRuns
    history={Object {}}
    location=""
    match=""
    t={[Function]}
    toolbarProps={Object {}}
    updateBanner={[Function]}
    updateDialog={[MockFunction]}
    updateSnackbar={[MockFunction]}
    updateToolbar={[Function]}
    view={1}
  />
</div>
`;

exports[`RunsAndArchive renders runs page 1`] = `
<div
  className="page"
>
  <MD2Tabs
    onSwitch={[Function]}
    selectedTab={0}
    tabs={
      Array [
        "",
        "",
      ]
    }
  />
  <EnhancedAllRunsList
    history={Object {}}
    location=""
    match=""
    t={[Function]}
    toolbarProps={Object {}}
    updateBanner={[Function]}
    updateDialog={[MockFunction]}
    updateSnackbar={[MockFunction]}
    updateToolbar={[Function]}
    view={0}
  />
</div>
`;
